mobile alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -441,7 +441,7 @@ color:#999;
     header,
     header.sticky
     {
-        padding:20px 50px;
+        padding:8px 50px;
         z-index:1000;
     }
     .menu
@@ -450,7 +450,7 @@ color:#999;
         top:55px;
         left:-900%;
         display:block;
-        padding:100px 50px;
+        padding:70px 50px;
         text-align: center;
         width:100%;
         height:100vh;
@@ -547,10 +547,10 @@ color:#999;
         flex-direction:column;
     }
     .banner .shanImg {
-        border: #fff solid 15px;
+        border: #fff solid 10px;
         border-bottom: #fff solid 40px;
         transform: rotate(-8deg);
-        min-width: 75%;
+        min-width: 80%;
     }
 
     .contentBx {
